--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8998,13 +8998,13 @@ textarea.form-control {
   height: inherit !important; }
 
 .footer {
-  background: #1a1a1a;
+  background: linear-gradient(90deg, rgba(15,32,58,1) 0%, rgba(13,171,214,1) 100%);;
   position: relative;
   z-index: 0;
   overflow: hidden;
   padding: 7em 0; }
   .footer a {
-    color: #eaee0a; }
+    color: #092a58; }
   .footer p {
     color: rgba(255, 255, 255, 0.6); }
   .footer .copyright {
