--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8542,9 +8542,9 @@ h1, h2, h3, h4, h5,
     .services:hover .icon, .services.active .icon {
       background: #fff; }
     .services:hover .media-body, .services.active .media-body {
-      color: rgba(255, 255, 255, 0.9); }
+      color:  rgb(57, 55, 184); }
       .services:hover .media-body h3, .services.active .media-body h3 {
-        color: #fff; }
+        color: rgb(57, 55, 184); }
     .services:hover .btn-custom, .services.active .btn-custom {
       background: #fff;
       right: -20px; }
