--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7996,10 +7996,11 @@ a.text-dark:hover, a.text-dark:focus {
 
 body {
   font-family: "Montserrat", Arial, sans-serif;
+  /* font-family: 'Nunito', sans-serif; */
   background: #fff;
   font-size: 15px;
   line-height: 1.8;
-  font-weight: 400;
+  font-weight: 200;
   color: gray; }
   body.menu-show {
     overflow: hidden;
