--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8060,7 +8060,7 @@ h1, h2, h3, h4, h5,
         color: #fff; }
 
 .ftco-navbar-light {
-  background: linear-gradient(90deg, rgba(13,171,214,1) 0%, rgba(15,32,58,1) 100%);;
+  background: linear-gradient(rgba(13,171,214,1) , rgba(15,32,58,1));
   z-index: 3;
   padding: 0;
   -webkit-box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34);
@@ -8068,7 +8068,7 @@ h1, h2, h3, h4, h5,
   box-shadow: 0px 5px 20px -17px rgba(0, 0, 0, 0.34); }
   @media (max-width: 991.98px) {
     .ftco-navbar-light {
-      background: linear-gradient(90deg, rgba(13,171,214,1) 0%, rgba(15,32,58,1) 100%);;
+      background: linear-gradient(rgba(13,171,214,1) , rgba(15,32,58,1) );
       position: relative;
       top: 0;
       padding: 10px 15px; } }
